PREP Java 19 testing